add main title for display